--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
     services:
       postgres:
         image: postgres
+        ports:
+          - '5432:5432'
         env:
           POSTGRES_PASSWORD: postgres
         options: >-
@@ -78,9 +80,11 @@ jobs:
       - name: ecto setup
         env:
           MIX_ENV: test
+          POSTGRES_HOST: postgres
         run: mix ecto.create
       - name: tests
         env:
           MIX_ENV: test
+          POSTGRES_HOST: postgres
         run: mix test
     
