--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,63 +2,24 @@ name: 'main'
 
 env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  MIX_ENV: test
+  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
 on:
   push:
     branches: [ main ]
-  pull_request:
-    branches: [ main ]
 
 jobs:
-  main:
-    name: Unit tests
+  test:
+    name: Test
     runs-on: ubuntu-latest
-
-    services:
-      db:
-        image: postgres
-        ports:
-          - '5432:5432'
-        env:
-          POSTGRES_USERNAME: postgres
-          POSTGRES_PASSWORD: postgres
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-
-    strategy:
-      matrix:
-        elixir:
-          - '1.13'
-        otp:
-          - '24.2'
-
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Elixir/Erlang setup
-        uses: erlef/setup-elixir@v1
-        with:
-          elixir-version: ${{ matrix.elixir }}
-          otp-version: ${{ matrix.otp }}
-      - name: Restore deps cache
-        uses: actions/cache@v3
-        with:
-          path: deps
-          key: ${{ runner.os }}-mix-v2-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ runner.os }}-mix-v2-
-      - name: Install deps
-        run: mix deps.get
-      - name: Compiler warnings
-        run: mix compile --warnings-as-errors
-      - name: Format
-        run: mix format --check-formatted
-      - name: Credo strict
-        run: mix credo --strict
-      - name: ecto setup
-        run: mix ecto.setup
-      - name: tests
-        run: mix test
+      - uses: ./.github/workflows/test
+  deploy:
+    name: Deploy 
+    needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only
+    
