--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,22 +26,14 @@ jobs:
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
-
-    strategy:
-      matrix:
-        elixir:
-          - '1.13'
-        otp:
-          - '24.2'
-
     steps:
       - name: Checkout
         uses: actions/checkout@v3
       - name: Elixir/Erlang setup
         uses: erlef/setup-elixir@v1
         with:
-          elixir-version: ${{ matrix.elixir }}
-          otp-version: ${{ matrix.otp }}
+          elixir-version: '1.13'
+          otp-version: '24.2'
       - name: Restore deps cache
         uses: actions/cache@v3
         with:
