--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/workflows/test
+      - uses: ./.github/workflows/test.yml
   deploy:
     name: Deploy 
     needs: test
