--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,7 @@ on:
 
 jobs:
   test:
-    name: Test
-    runs-on: ubuntu-latest
-    steps:
-      - uses: ./.github/workflows/test.yml
+    uses: ./.github/workflows/test.yml
   deploy:
     name: Deploy 
     needs: test
