--- a/fly.toml
+++ b/fly.toml
@@ -10,7 +10,7 @@ processes = []
   release_command = "/app/bin/migrate"
 
 [env]
-  PHX_HOST = "temporary-hack.fly.dev"
+  PHX_HOST = "temporaryhack.com"
   PORT = "8080"
 
 [experimental]
